--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "matcha": "*"
   },
   "main": "index",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/visionmedia/node-exif.git"
+  },
   "scripts": {
     "test": "./node_modules/.bin/mocha test/index.js --reporter spec"
   }
