--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "keywords": [],
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
   "dependencies": {
-    "shelly": "0.0.3"
+    "shelly": "~0.0.3"
   },
   "devDependencies": {
     "mocha": "*",
     "better-assert": "*",
-    "matcha": "~0.3.0"
+    "matcha": "*"
   },
-  "main": "index"
+  "main": "index",
+  "scripts": {
+    "test": "./node_modules/.bin/mocha test/index.js --reporter spec"
+  }
 }
