--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "exif2",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "EXIF extraction with exiftool",
   "keywords": [],
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
@@ -15,7 +15,7 @@
   "main": "index",
   "repository": {
     "type": "git",
-    "url": "https://github.com/visionmedia/node-exif.git"
+    "url": "https://github.com/Yvem/node-exif.git"
   },
   "scripts": {
     "test": "./node_modules/.bin/mocha test/index.js --reporter spec"
