switched to a modern assertion framework

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "devDependencies": {
     "mocha": "*",
-    "better-assert": "*",
-    "matcha": "*"
+    "chai": "*"
   },
   "main": "index",
   "repository": {
