--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "main": "index",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Yvem/node-exif.git"
+    "url": "https://github.com/phuson/exif2.git"
   },
   "scripts": {
     "test": "mocha test/index.js --reporter spec",
